--- a/src/pages/Cadastro/Cadastro.module.scss
+++ b/src/pages/Cadastro/Cadastro.module.scss
@@ -5,6 +5,7 @@ $botoes:#FDFDFD;
 $azul-indicador:#1165BA;
 $gelo: #C5C7C5;
 $margin-box: 20px ;
+$cinza-termo:#D7D9D7;
 $error: #C1292E;
 
 
@@ -79,7 +80,7 @@ color: $azul-indicador;
     
 
 .botoes{
-    width: 90%;
+    width: 100%;
     height: 50px;
     margin-top: 5px;
 }
@@ -90,8 +91,9 @@ color: $azul-indicador;
     height: 29px;
     background: $botoes;
     border-radius: 5px;
-    border: $cinza 1px solid;    
+    border: $cinza 1px solid; 
 }   
+
 @media only screen and (max-width:1000px){
     .inputs{
         position: flex;
@@ -199,7 +201,7 @@ outline:none;
     .error{
         color:$error;
         font-size: 14px;
-        border: 1px solid red;
+        
     }
     
     .senhaDefinicao{
@@ -407,7 +409,7 @@ color: #5D5F5D;
     border: none;
     background: none;
     color: $cinza;
-    transform: translate(1450%,-50%);
+    transform: translate(1250%,10%);
 }
 
 .buttonPolitica{
@@ -419,5 +421,11 @@ color: #5D5F5D;
     border: none;
     background: none;
     color: $cinza;
-    transform: translate(1450%,-50%);
+    transform: translate(1250%,10%);
+}
+
+.backTermo{
+    background-color: $cinza-termo;
+    position: flex;
+    width: 100%;
 }
