--- a/src/components/InputSenha/inputSenha.module.scss
+++ b/src/components/InputSenha/inputSenha.module.scss
@@ -18,7 +18,7 @@ $secondary-color: #5D5F5D;
 
     .image {
       background: url("../../../public/SenhaHover.svg") no-repeat;
-      background-position: 14px 14px;
+      background-position: 10px 10px;
     }
   }
 
@@ -28,14 +28,14 @@ $secondary-color: #5D5F5D;
 
     .image {
       background: url("../../../public/SenhaSelected.svg") no-repeat;
-      background-position: 14px 14px;
+      background-position: 10px 10px;
     }
   }
 }
 
 .image {
   background: url("../../../public/SenhaDefault.svg") no-repeat;
-  background-position: 14px 14px;
+  background-position: 10px 10px;
   padding-top: 15px;
   padding-left: 15px;
   width: 24px;
@@ -53,6 +53,7 @@ $secondary-color: #5D5F5D;
   font-size: 16px;
   line-height: 24px;
   color: $secondary-color;
+
 }
 
 .button {
@@ -60,4 +61,5 @@ $secondary-color: #5D5F5D;
   background: none;
   border: none;
   outline: none;
+  margin:0 10px ;
 }
