--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -1,5 +1,5 @@
 .backgroundImage {
-  background: url("../../../public/BackgroundLogin.svg") no-repeat;
+  background: url("/public/images/BackgroundLogin.svg") no-repeat;
   background-size: cover;
   width: 100%;
   height: 100%;
