--- a/src/components/atoms/FormCard/formCard.module.scss
+++ b/src/components/atoms/FormCard/formCard.module.scss
@@ -12,12 +12,11 @@ $secondary-color: #5D5F5D;
   padding: 32px;
   display: flex;
   flex-direction: column;
-  background:
-    linear-gradient(303.77deg, rgba(214, 214, 214, 0) -1.3%, rgba(232, 232, 232, 0.79) 54.57%),
-    linear-gradient(180deg, rgba(253, 253, 253, 0) 0%, rgba(247, 247, 247, 0.79) 68.75%);
+  background-color: #FDFDFD;
   opacity: 0.9;
   border-radius: 12px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  
 }
 
 .logo{
