fix: broken images in email templates

--- a/Templates/EmailRegister/index.html
+++ b/Templates/EmailRegister/index.html
@@ -15,7 +15,7 @@
 				<table class="container" cellpadding="0" cellspacing="0" border="0" style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; width: 100vw;">
 					<tr>
 						<td align="center" valign="top">
-							<img src="https://mentoria-online.vercel.app/_next/static/media/LogoSJ.5443ebef.svg" alt="logo SouJunior" style="max-width: 100%;" />
+							<img src="https://res.cloudinary.com/dja1rct0m/image/upload/v1705506394/souJunior/vbcechsuw9gb0sihb8oi.svg" alt="logo SouJunior" style="max-width: 100%;" />
 						</td>
 					</tr>
 					<tr>
@@ -25,7 +25,7 @@
 					</tr>
 					<tr>
 						<td align="center" valign="top">
-							<img src="./assets/garotaAcenando.png" alt="Garota acenando" style="max-width: 100%;" />
+							<img src="https://res.cloudinary.com/dja1rct0m/image/upload/v1705506384/souJunior/cnbmrjhheza1bknzt5yg.png" alt="Garota acenando" style="max-width: 100%;" />
 						</td>
 					</tr>
 					<tr>
