--- a/Templates/ResetPassword/index.html
+++ b/Templates/ResetPassword/index.html
@@ -15,7 +15,7 @@
 				<table class="container" cellpadding="0" cellspacing="0" border="0" style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; width: 100vw;">
 					<tr>
 						<td align="center" valign="top">
-							<img src="./assets/sou-junior.svg" alt="logo SouJunior" style="max-width: 100%;" />
+							<img src="https://res.cloudinary.com/dja1rct0m/image/upload/v1705506394/souJunior/vbcechsuw9gb0sihb8oi.svg" alt="logo SouJunior" style="max-width: 100%;" />
 						</td>
 					</tr>
                     <tr>
@@ -28,7 +28,7 @@
 					</tr>
 					<tr>
 						<td align="center" valign="top">
-							<img src="./assets/garotaPC.png" alt="Garota no pc" style="max-width: 100%;" />
+							<img src="https://res.cloudinary.com/dja1rct0m/image/upload/v1705506393/souJunior/l4lo4kj29cjwnstq9bbj.png" alt="Garota no pc" style="max-width: 100%;" />
 						</td>
 					</tr>
 				
